--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <title>Sturla Lange</title>
-</head>
-<body>
-    <h1>123</h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Sturla22.GitHub.io by Sturla22</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Sturla22.GitHub.io</h1>
+        <p></p>
+
+
+        <p class="view"><a href="https://github.com/Sturla22">View My GitHub Profile</a></p>
+
+      </header>
+      <section>
+        <h1>
+<a id="hello" class="anchor" href="#hello" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello!</h1>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
