--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
       </header>
       <section>
-        <h1>
-<a id="hello" class="anchor" href="#hello" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello!</h1>
+        <h1>Hello!</h1>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
