--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Sturla22.GitHub.io</h1>
+        <h1>Sturla Lange</h1>
         <p></p>
         <p class="view"><a href="https://github.com/Sturla22">View My GitHub Profile</a></p>
       </header>
       <br>
       <section>
         <h1>Hello!</h1>
+          <p><img src="https://avatars1.githubusercontent.com/u/5856247?s=460&u=e5ae8e18029e701e88e30c70409feefd176a0e98&v=4"></p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
